force-app/main/default/objects/Container__c/fields/Capacity_Left_Volume__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Left_Volume__c</fullName>
    <label>Capacity Left Volume (GL)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>