force-app/main/default/objects/Container__c/fields/Current_Fill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Fill_Rate__c</fullName>
    <label>Current Fill Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>