force-app/main/default/objects/Container__c/fields/Current_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume__c</fullName>
    <label>Current Volume (GL)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>