force-app/main/default/objects/Container__c/fields/Haztrack_ID__c.field-meta.xml
<CustomField>
    <fullName>Haztrack_ID__c</fullName>
    <externalId>true</externalId>
    <label>Haztrack ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>