force-app/main/default/objects/Container__c/fields/Last_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Last_Recorded__c</fullName>
    <label>Last Recorded</label>
    <type>DateTime</type>
</CustomField>