force-app/main/default/objects/Container__c/fields/Received_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Received_Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>