force-app/main/default/objects/Container__c/fields/Received_QBO_ID__c.field-meta.xml
<CustomField>
    <fullName>Received_QBO_ID__c</fullName>
    <label>QBO ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>