force-app/main/default/objects/Container__c/fields/Received_SN_Number__c.field-meta.xml
<CustomField>
    <fullName>Received_SN_Number__c</fullName>
    <label>SN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>