force-app/main/default/objects/Container__c/fields/Sensor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Name__c</fullName>
    <label>Sensor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>