force-app/main/default/objects/Container__c/fields/Sensor_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Serial_Number__c</fullName>
    <label>Sensor Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>