force-app/main/default/objects/Container__c/fields/Sensor_UID__c.field-meta.xml
<CustomField>
    <fullName>Sensor_UID__c</fullName>
    <label>Sensor UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>