force-app/main/default/objects/Container__c/fields/Services_Needed__c.field-meta.xml
<CustomField>
    <fullName>Services_Needed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Needed</label>
    <referenceTo>Services_Needed__c</referenceTo>
    <relationshipLabel>Containers</relationshipLabel>
    <relationshipName>Containers</relationshipName>
    <type>Lookup</type>
</CustomField>