force-app/main/default/objects/Container__c/fields/Tank_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Tank_Serial_Number__c</fullName>
    <label>Tank Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>