force-app/main/default/objects/Container__c/fields/Volume_Change__c.field-meta.xml
<CustomField>
    <fullName>Volume_Change__c</fullName>
    <label>Volume Change</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>