force-app/main/default/objects/Container__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Container_Model_Name__c</columns>
    <columns>Sensor_Serial_Number__c</columns>
    <columns>Tank_Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Services_Needed__c</columns>
    <columns>Current_Volume__c</columns>
    <columns>Current_Fill_Rate__c</columns>
    <columns>Capacity_Left_Volume__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>